--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -19,9 +19,9 @@
 \def\Normal{\mathrm{Normal}}
 \def\X{{\mathcal X}}
 \def\Y{{\mathcal Y}}
-\def\RL{{\mathcal R}}
+\def\RL{{r}}
 \def\N{{\mathcal N}}
-\def\Prefix{{\mathcal P}}
+\def\Prefix{{p}}
 \def\RuleSet{{\mathcal S}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\y}{\mathbf{y}}
